basic-scheduler/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-scheduler
  labels:
    app: basic-scheduler
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
  selector:
    app: basic-scheduler
